// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Display Display 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }
    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <h4>
    Display Flex
  </h4>
  

  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-display-flex"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


  <h4>
    Display Grid
  </h4>
  

  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-display-grid"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


  <h4>
    Display Inline-Block
  </h4>
  

  <div
    class="sap-docs-container"
  >
    
    
    <section>
      
        
      <div
        class="sap-display-inline-block"
      />
      
        
      <div
        class="sap-display-inline-block"
      />
      
        
      <div
        class="sap-display-inline-block"
      />
      
    
    </section>
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Display Screen-reader-only elements 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }
    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <a
    href="#"
  >
    
    
    <span
      class="sap-icon sap-icon--account"
    />
    
    
    <span
      class="sap-sr-only"
    >
      User Account
    </span>
    

  </a>
  

</div>
`;
